# tune

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  language_design.yml  tooling.yml
.github/workflows/: ci.yml
crates/dyno/: Cargo.toml
crates/dyno/src/: lib.rs
crates/dyno_cli/: Cargo.toml
crates/dyno_cli/src/: lib.rs  main.rs  report.rs
crates/dyno_cli/tests/: docs.rs  language_examples.rs  smoke.rs  std_examples.rs
crates/dyno_pkg/: Cargo.toml
crates/dyno_project/: Cargo.toml
crates/tune_ast/: Cargo.toml
crates/tune_bytecode/: Cargo.toml
crates/tune_bytecode/src/: artifact.rs  function.rs  lib.rs  lower.rs  lower_state.rs  lower_tables.rs  lower_tasks.rs  opcode.rs  provenance.rs  validate.rs
crates/tune_bytecode/src/lower/: calls.rs  compare.rs  context.rs  control.rs  error.rs  flatten.rs  frame.rs  numeric.rs  op.rs  sequence.rs  string.rs
crates/tune_bytecode/src/validate/: generics.rs  sites.rs  support.rs
crates/tune_bytecode/tests/: smoke.rs  validation.rs
crates/tune_db/: Cargo.toml
crates/tune_db/src/: ids.rs  interner.rs  lib.rs  semantic.rs  source.rs
crates/tune_db/src/semantic/: walk.rs
crates/tune_db/tests/: semantic.rs  smoke.rs
crates/tune_diagnostics/: Cargo.toml
crates/tune_engine/: Cargo.toml
crates/tune_engine/benches/: pipeline.rs
crates/tune_engine/benches/fixtures/: arithmetic.tn  finite_for.tn  generic_identity.tn  sequence_access.tn  spawn_join.tn  struct_methods.tn  structural_match.tn  tuple_expr.tn
crates/tune_engine/src/: diagnostics.rs  executable.rs  host.rs  imports.rs  imports_closure.rs  imports_diagnostics.rs  imports_internalize.rs  imports_remap.rs  imports_shapes.rs  lib.rs  meta.rs  paths.rs  profile.rs  project.rs  project_sources.rs  reachable.rs  reports.rs  runtime.rs
crates/tune_engine/src/profile/: quality.rs
crates/tune_engine/tests/: api.rs  behavior_audit.rs  control_execution.rs  execution.rs  foundation_audit.rs  generic_execution.rs  host_authorities.rs  host_imports.rs  match_execution.rs  meta.rs  never_flow.rs  optional_execution.rs  package_imports.rs  project_imports.rs  quality.rs  runtime_faults.rs  sequence_mutation.rs  smoke.rs  std_math.rs  string_execution.rs  struct_execution.rs  task_execution.rs
crates/tune_fmt/: Cargo.toml
crates/tune_hir/: Cargo.toml
crates/tune_host/: Cargo.toml
crates/tune_ir/: Cargo.toml
crates/tune_ir/src/: ir.rs  lib.rs  lower.rs  lower_aggregate.rs  lower_binary.rs  lower_bindings.rs  lower_bool.rs  lower_byte.rs  lower_calls.rs  lower_control.rs  lower_for.rs  lower_sequence.rs  lower_slots.rs  lower_state.rs  lower_tasks.rs  lower_unary.rs  ownership.rs  provenance.rs
crates/tune_ir/tests/: smoke.rs
crates/tune_lsp/: Cargo.toml
crates/tune_lsp/src/: code_action.rs  completion.rs  diagnostics.rs  document.rs  document_link.rs  document_symbol.rs  hover.rs  inlay.rs  jsonrpc.rs  lib.rs  protocol.rs  rename.rs  request.rs  semantic_tokens.rs  server.rs  signature.rs  workspace.rs
crates/tune_lsp/src/jsonrpc/: value.rs
crates/tune_lsp/tests/: jsonrpc.rs  smoke.rs  tooling.rs
crates/tune_meta/: Cargo.toml
crates/tune_opt/: Cargo.toml
crates/tune_opt/src/: bce.rs  escape.rs  generics.rs  lib.rs  rc_elim.rs  strings.rs  thread_escape.rs
crates/tune_opt/tests/: rc_elim.rs  smoke.rs
crates/tune_plan/: Cargo.toml
crates/tune_plan/src/: lib.rs  lower.rs  meta.rs  plan.rs  result_flow.rs
crates/tune_plan/src/lower/: assign.rs  callables.rs  calls.rs  captures.rs  expr.rs  materialization.rs  members.rs  module.rs  patterns.rs  returns.rs  specialize.rs  structural.rs  values.rs
crates/tune_plan/tests/: generic_instantiation.rs  materialization.rs  never_flow.rs  smoke.rs  state_planning.rs  tasks_members.rs
crates/tune_resolve/: Cargo.toml
crates/tune_resolve/src/: facts.rs  imports.rs  lib.rs  locals.rs  prelude.rs  resolve.rs  scope.rs
crates/tune_resolve/src/resolve/: body.rs  record.rs  reserved.rs  validate.rs
crates/tune_resolve/src/resolve/body/: resolver.rs
crates/tune_resolve/src/resolve/body/resolver/: expected.rs  flow.rs  names.rs  validation.rs
crates/tune_resolve/tests/: body_diagnostics.rs  facts.rs  smoke.rs  variant_context.rs
crates/tune_runtime/: Cargo.toml
crates/tune_shape/: Cargo.toml
crates/tune_shape/src/: analyze.rs  builtin.rs  constraints.rs  expr.rs  flow.rs  hir.rs  lib.rs  literal.rs  materialize.rs  shape.rs  state.rs
crates/tune_shape/src/analyze/: bindings.rs  callable.rs  calls.rs  contracts.rs  control.rs  diagnostics.rs  fields.rs  generics.rs  item_shapes.rs  operators.rs  values.rs
crates/tune_shape/src/analyze/contracts/: effects.rs  iteration.rs  structural.rs
crates/tune_shape/tests/: calls.rs  foundation_audit.rs  generic_enums.rs  hir_shapes.rs  match_patterns.rs  materialize.rs  never_flow.rs  numeric_policy.rs  optional_narrowing.rs  smoke.rs  state.rs  unary.rs
crates/tune_std/: Cargo.toml
crates/tune_std/src/: bits.rs  encoding.rs  env.rs  fs.rs  hash.rs  io.rs  json.rs  lib.rs  math.rs  meta.rs  parse.rs  path.rs  prelude.rs  process.rs  random.rs  text.rs  time.rs
crates/tune_std/src/json/: value.rs
crates/tune_std/tests/: bits.rs  encoding.rs  fs.rs  hash.rs  io.rs  json.rs  math.rs  parse.rs  path.rs  process.rs  random.rs  smoke.rs  text.rs  time.rs
crates/tune_syntax/: Cargo.toml
crates/tune_vm/: Cargo.toml
crates/tune_vm/src/: dispatch.rs  error.rs  execute.rs  execute_aggregate.rs  execute_compare.rs  execute_numeric.rs  execute_range.rs  execute_sequence.rs  execute_string.rs  execute_support.rs  execute_tasks.rs  frame.rs  host_resource.rs  lib.rs  resource_table.rs  vm.rs  vm_state.rs
crates/tune_vm/tests/: host_resources.rs  smoke.rs  task_modes.rs
docs/: feedback.md  from-other-languages.md  getting-started.md  language-tour.md  stdlib.md  tooling.md  tutorial.md  why-tune.md
docs/diagnostics/: README.md  T0101.md  (+23 more)
editors/: README.md
examples/: README.md
scripts/: benchmark_pipeline.sh  check_tooling.sh
(+136 files in other folders)
