[package]
name = "dyno"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description = "Core crate for the dyno workspace."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
