[package]
name = "tune_bytecode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]
tune_diagnostics = { path = "../tune_diagnostics" }
tune_hir = { path = "../tune_hir" }
tune_ir = { path = "../tune_ir" }
tune_resolve = { path = "../tune_resolve" }
tune_shape = { path = "../tune_shape" }

[dev-dependencies]
tune_resolve = { path = "../tune_resolve" }
tune_shape = { path = "../tune_shape" }
