[package]
name = "tune_engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dyno_project = { path = "../dyno_project" }
tune_db = { path = "../tune_db" }
tune_diagnostics = { path = "../tune_diagnostics" }
tune_hir = { path = "../tune_hir" }
tune_host = { path = "../tune_host" }
tune_ir = { path = "../tune_ir" }
tune_bytecode = { path = "../tune_bytecode" }
tune_plan = { path = "../tune_plan" }
tune_resolve = { path = "../tune_resolve" }
tune_runtime = { path = "../tune_runtime" }
tune_shape = { path = "../tune_shape" }
tune_syntax = { path = "../tune_syntax" }
tune_vm = { path = "../tune_vm" }
