[package]
name = "tune_ir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]
tune_diagnostics = { path = "../tune_diagnostics" }
tune_hir = { path = "../tune_hir" }
tune_plan = { path = "../tune_plan" }
tune_resolve = { path = "../tune_resolve" }
tune_shape = { path = "../tune_shape" }
