[package]
name = "tune_opt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]
tune_hir = { path = "../tune_hir" }
tune_ir = { path = "../tune_ir" }
tune_shape = { path = "../tune_shape" }
tune_diagnostics = { path = "../tune_diagnostics" }

[dev-dependencies]
