[package]
name = "tune_shape"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]
tune_hir = { path = "../tune_hir" }
tune_resolve = { path = "../tune_resolve" }
tune_diagnostics = { path = "../tune_diagnostics" }
