[package]
name = "tune_std"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]
tune_host = { path = "../tune_host" }
tune_shape = { path = "../tune_shape" }
tune_runtime = { path = "../tune_runtime" }
tune_meta = { path = "../tune_meta" }
